--- a/ClinicMobile/app/src/main/res/values/colors.xml
+++ b/ClinicMobile/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#202052</color>
     <color name="colorAccent">#DFAC37</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="lightPurple">#9B9BBB</color>
 </resources>
