--- a/ClinicMobile/app/src/main/res/layout/fragment_add_room.xml
+++ b/ClinicMobile/app/src/main/res/layout/fragment_add_room.xml
@@ -9,48 +9,36 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="200dp"
+        android:layout_gravity="bottom|end"
+        android:contentDescription="@string/logo"
         android:src="@drawable/tooth"
-        android:tint="#47202052"
-        android:layout_gravity="bottom|end"/>
+        android:tint="#47202052" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:id="@+id/headerLinear"
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/alike_regular"
-                android:text="@string/add_rooms"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_marginRight="16dp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/line"
-                android:layout_gravity="center"/>
-
-        </LinearLayout>
+            android:layout_margin="16dp"
+            android:drawableEnd="@drawable/line"
+            android:drawablePadding="6dp"
+            android:fontFamily="@font/alike_regular"
+            android:text="@string/add_rooms"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="26sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@id/header"
             android:orientation="vertical"
-            android:paddingEnd="30dp"
             android:paddingStart="30dp"
             android:paddingTop="20dp"
-            android:layout_below="@id/headerLinear">
+            android:paddingEnd="30dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,8 +48,8 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:text="@string/room_name"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
@@ -69,12 +57,15 @@
                 <EditText
                     android:id="@+id/roomNameEdit"
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="28dp"
-                    android:hint="e.g. H113"
+                    android:layout_weight="2"
                     android:background="@drawable/spinner_bg"
+                    android:hint="@string/room_hint"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:padding="8dp"
                     android:textSize="12sp"
-                    android:paddingLeft="8dp"/>
+                    tools:targetApi="o" />
 
 
             </LinearLayout>
@@ -87,26 +78,26 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
                     android:text="@string/department"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:layout_weight="2"
                     android:background="@drawable/spinner_bg">
 
                     <Spinner
                         android:id="@+id/departmentSpinner"
                         android:layout_width="match_parent"
                         android:layout_height="28dp"
-                        android:backgroundTint="@color/colorPrimaryDark"
                         android:layout_gravity="center"
-                        android:textSize="12sp"/>
+                        android:backgroundTint="@color/colorPrimaryDark"
+                        android:textSize="12sp" />
 
                 </RelativeLayout>
 
@@ -116,13 +107,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:weightSum="5"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="5">
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="4"
                     android:layout_height="wrap_content"
+                    android:layout_weight="4"
                     android:text="@string/floor"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
@@ -132,26 +123,28 @@
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:background="#FFFFFF"
+                    android:contentDescription="@string/remove"
                     android:src="@drawable/remove"
-                    android:tint="@color/colorPrimaryDark"/>
+                    android:tint="@color/colorPrimaryDark" />
 
                 <TextView
                     android:id="@+id/floorText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="18sp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    android:text="@string/floor_number"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp" />
 
                 <ImageButton
                     android:id="@+id/addFloorButton"
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:background="#FFFFFF"
+                    android:contentDescription="@string/add"
                     android:src="@drawable/add"
-                    android:tint="@color/colorPrimaryDark"/>
+                    android:tint="@color/colorPrimaryDark" />
 
             </LinearLayout>
 
@@ -159,13 +152,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:weightSum="5"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="5">
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="4"
                     android:layout_height="wrap_content"
+                    android:layout_weight="4"
                     android:text="@string/capacity"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="18sp" />
@@ -175,26 +168,28 @@
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:background="#FFFFFF"
+                    android:contentDescription="@string/remove"
                     android:src="@drawable/remove"
-                    android:tint="@color/colorPrimaryDark"/>
+                    android:tint="@color/colorPrimaryDark" />
 
                 <TextView
                     android:id="@+id/capacityText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="1"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="18sp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"/>
+                    android:layout_marginRight="30dp"
+                    android:text="@string/capacity_number"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="18sp" />
 
                 <ImageButton
                     android:id="@+id/addCapacityButton"
                     android:layout_width="20dp"
                     android:layout_height="match_parent"
                     android:background="#FFFFFF"
+                    android:contentDescription="@string/add"
                     android:src="@drawable/add"
-                    android:tint="@color/colorPrimaryDark"/>
+                    android:tint="@color/colorPrimaryDark" />
 
             </LinearLayout>
 
@@ -204,13 +199,13 @@
             android:id="@+id/addRoom"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/colorPrimaryDark"
-            android:textColor="@color/white"
-            android:text="@string/add_rooms"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="40dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/add_rooms"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
