--- a/ClinicMobile/app/src/main/res/layout/activity_home.xml
+++ b/ClinicMobile/app/src/main/res/layout/activity_home.xml
@@ -33,25 +33,25 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/tooth"
-                android:tint="@color/colorPrimaryDark"/>
+                android:tint="@color/colorPrimaryDark"
+                android:contentDescription="@string/logo" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_weight="3"
                 android:layout_height="30dp"
-                android:tint="@color/colorPrimaryDark"/>
+                android:tint="@color/colorPrimaryDark"
+                android:contentDescription="@string/empty" />
 
-            <ImageView
+            <ImageButton
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/settings"
-                android:clickable="true"
-                android:onClick="settingsDialog" />
+                android:onClick="settingsDialog"
+                android:contentDescription="@string/settings" />
 
         </LinearLayout>
 
     </com.google.android.material.navigation.NavigationView>
-
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
