--- a/ClinicMobile/app/src/main/res/layout/fragment_add_roles.xml
+++ b/ClinicMobile/app/src/main/res/layout/fragment_add_roles.xml
@@ -9,75 +9,57 @@
     <ImageView
         android:layout_width="150dp"
         android:layout_height="200dp"
+        android:layout_gravity="bottom|end"
+        android:contentDescription="@string/logo"
         android:src="@drawable/tooth"
-        android:tint="#47202052"
-        android:layout_gravity="bottom|end"/>
+        android:tint="#47202052" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:drawableEnd="@drawable/line"
+            android:drawablePadding="6dp"
+            android:fontFamily="@font/alike_regular"
+            android:text="@string/add_roles"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="26sp"
+            android:textStyle="bold" />
+
         <LinearLayout
-            android:id="@+id/headerLinear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:layout_below="@id/header"
+            android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            android:padding="16dp">
+            android:padding="30dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/alike_regular"
-                android:text="@string/add_roles"
+                android:layout_weight="2"
+                android:text="@string/role_name"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="26sp"
-                android:textStyle="bold"
-                android:layout_marginRight="16dp" />
+                android:textSize="18sp" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/line"
-                android:layout_gravity="center"/>
+            <EditText
+                android:id="@+id/roleNameEdit"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
+                android:layout_weight="2"
+                android:background="@drawable/spinner_bg"
+                android:hint="@string/role_hint"
+                android:inputType="text"
+                android:padding="8dp"
+                android:textSize="12sp"
+                android:importantForAutofill="no"
+                tools:targetApi="o"/>
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingEnd="30dp"
-            android:paddingStart="30dp"
-            android:paddingTop="20dp"
-            android:layout_below="@id/headerLinear">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_weight="2"
-                    android:layout_height="wrap_content"
-                    android:text="@string/role_name"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="18sp" />
-
-                <EditText
-                    android:id="@+id/roleNameEdit"
-                    android:layout_width="0dp"
-                    android:layout_weight="2"
-                    android:layout_height="28dp"
-                    android:hint="e.g. Admin"
-                    android:background="@drawable/spinner_bg"
-                    android:textSize="12sp"
-                    android:paddingLeft="8dp"/>
-
-
-            </LinearLayout>
 
         </LinearLayout>
 
@@ -85,13 +67,13 @@
             android:id="@+id/addRole"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/colorPrimaryDark"
-            android:textColor="@color/white"
-            android:text="@string/add_roles"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="40dp"
             android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="40dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/add_roles"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
